<resources>
    <string name="app_name">Jomir Dokan</string>
    <string name="title_activity_maps">Jomir Dokan</string>

    <string name="title_my_land">My Lands</string>
    <string name="title_search">Search Lands</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered, Login</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_end">Exit</string>
    <string name="action_view">View</string>
    <string name="action_help">Help</string>
    <string name="title_activity_main_activitynag">MainActivitynag</string>
    <string name="signed_out">Sign out</string>
    <string name="signed_in">Sign in</string>

    <string name="toolbar_title">CSE 2K15</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search…</string>

    <string name="button_name">Icon and text</string>


    <string name="api">AIzaSyBRiyuFnbrCZSaxg0Tc3XNEdTIZdX7v790</string>

</resources><!--AIzaSyBRiyuFnbrCZSaxg0Tc3XNEdTIZdX7v790-->