<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/centercrop"
    android:weightSum="6"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBars"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:maxHeight="25dip"
            android:minHeight="25dip"
            android:layout_marginTop="-10dp"
            android:progress="30"
            android:progressDrawable="@drawable/greenprogress" />

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/paper_plane" />

    </LinearLayout>


    <LinearLayout
        android:layout_weight="4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

            <EditText
                android:foreground="@drawable/scrim"
                android:background="@android:color/transparent"
                android:paddingLeft="20dp"
                android:id="@+id/email"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:foreground="@drawable/scrim"
                android:background="@android:color/transparent"
                android:paddingLeft="20dp"
                android:id="@+id/password"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        <Button
            android:visibility="gone"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:id="@+id/cardSignup"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/action_sign_in_short"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:textSize="15dp" />

        <RelativeLayout
            android:layout_marginBottom="-10dp"
            android:layout_width="match_parent"
            android:layout_height="25dip">
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:maxHeight="25dip"
                android:minHeight="25dip"
                android:progress="30"
                android:progressDrawable="@drawable/greenprogress" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
