<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/centercrop"
    android:weightSum="6"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:maxHeight="20dip"
            android:minHeight="20dip"
            android:layout_marginTop="-10dp"
            android:progress="30"
            android:progressDrawable="@drawable/greenprogress" />

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/paper_plane" />

        <TextView
            android:visibility="gone"
            android:id="@+id/log"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:text="Login"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <LinearLayout
        android:layout_weight="4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

            <EditText
                android:foreground="@drawable/scrim"
                android:background="@android:color/transparent"
                android:paddingLeft="20dp"
                android:id="@+id/email"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:foreground="@drawable/scrim"
                android:background="@android:color/transparent"
                android:paddingLeft="20dp"
                android:id="@+id/password"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:id="@+id/cardLogin"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Login"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom">

            <Button
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:layout_weight="1"
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@null"
                android:text="Create New Account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

        <Button
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:layout_weight="1"
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginBottom="-10dp"
            android:layout_width="match_parent"
            android:layout_height="25dip">
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:maxHeight="25dip"
                android:minHeight="25dip"
                android:progress="30"
                android:progressDrawable="@drawable/greenprogress" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
